force-app/main/default/objects/MigrationRollback__c/MigrationRollback__c.object-meta.xml
<CustomObject>
    <description>Tracks a rollback execution against a migration job. Creating this record and setting Status to Pending triggers the reverse-order delete Apex batch.</description>
    <label>Migration Rollback</label>
    <nameField>
        <displayFormat>ROLLBACK-{0000}</displayFormat>
        <label>Rollback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migration Rollbacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>