force-app/main/default/objects/MigrationRollback__c/fields/ApexJobId__c.field-meta.xml
<CustomField>
    <fullName>ApexJobId__c</fullName>
    <description>AsyncApexJob.Id of the Batchable that is executing the reverse-order delete. Query AsyncApexJob with this ID to monitor rollback progress in Apex Jobs.</description>
    <label>Apex Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>