force-app/main/default/objects/MigrationRollback__c/fields/CurrentDeleteOrder__c.field-meta.xml
<CustomField>
    <fullName>CurrentDeleteOrder__c</fullName>
    <description>The LoadOrder value currently being processed by the rollback batch. Starts at the highest LoadOrder and decrements. Children are always deleted before parents.</description>
    <label>Current Delete Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>