force-app/main/default/objects/MigrationRollback__c/fields/DeletedCount__c.field-meta.xml
<CustomField>
    <fullName>DeletedCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Running count of records successfully deleted from the target org. Incremented after each delete batch.</description>
    <label>Deleted Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>