force-app/main/default/objects/MigrationRollback__c/fields/ErrorLog__c.field-meta.xml
<CustomField>
    <fullName>ErrorLog__c</fullName>
    <description>Concatenated log of records that could not be deleted during rollback. Format: "ObjectApiName:SalesforceId — ErrorMessage" per line. Allows manual cleanup of any records the automated rollback could not remove.</description>
    <label>Error Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>