force-app/main/default/objects/MigrationRollback__c/fields/FailedDeleteCount__c.field-meta.xml
<CustomField>
    <fullName>FailedDeleteCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Records that could not be deleted during rollback. Common causes: already deleted externally, record locked by workflow, insufficient permissions. Detail in ErrorLog.</description>
    <label>Failed Delete Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>