force-app/main/default/objects/MigrationRollback__c/fields/InitiatedBy__c.field-meta.xml
<CustomField>
    <fullName>InitiatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Salesforce user who triggered the rollback. Audit trail for who authorized the reverse operation.</description>
    <label>Initiated By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Initiated Rollbacks</relationshipLabel>
    <relationshipName>InitiatedRollbacks</relationshipName>
    <type>Lookup</type>
</CustomField>