force-app/main/default/objects/MigrationRollback__c/fields/TotalToDelete__c.field-meta.xml
<CustomField>
    <fullName>TotalToDelete__c</fullName>
    <description>Count of Active MigrationRecordLog entries at rollback start time. Used to calculate rollback progress percentage.</description>
    <label>Total to Delete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>